# fla-dynoview

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: config.rs  cp437.rs  erg.rs  fat12.rs  lib.rs
core/tests/: corpus.rs
docs/da/: install-and-usage.md
docs/de/: install-and-usage.md
docs/en/: install-and-usage.md
docs/es/: install-and-usage.md
docs/fi/: install-and-usage.md
docs/fr/: install-and-usage.md
docs/it/: install-and-usage.md
docs/ja/: install-and-usage.md
docs/nl/: install-and-usage.md
docs/pt/: install-and-usage.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  model.rs  reset.rs  settings.rs
src/lib/: api.ts  settings.svelte.ts  types.ts  units.ts
src/lib/charts/: DynoChart.svelte  chart-types.ts  series.ts
src/lib/components/: Comparison.svelte  PrintReport.svelte  RunDetail.svelte
src/lib/i18n/: index.ts
src/lib/i18n/locales/: da.ts  de.ts  en.ts  es.ts  fi.ts  fr.ts  it.ts  ja.ts  nl.ts  pt.ts
