[package]
name = "fla-dynoview"
description = "Read Bosch FLA 203 dyno floppies, browse/archive runs, print & export PDF"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "fla-dynoview"

[lib]
name = "fla_dynoview_lib"
path = "src/lib.rs"

[[bin]]
name = "fla-dynoview"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fladyno-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fatfs = "0.3"
fscommon = "0.1"
